Networking K8 Lab/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-api
  namespace: net-lab
spec:
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 5000        
      targetPort: 80
  type: ClusterIP
